# task_tracker

./: .cursorignore  .gitignore  README.md  cookies.txt  create_projects.py  create_sample_tasks.py  create_simple_tasks.py  create_users.py  db.sqlite3  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.kiro/specs/ai-task-tools/: design.md  requirements.md  tasks.md
accounts/: admin.py  models.py  urls.py
accounts/migrations/: 0001_initial.py
accounts/views/: __init__.py  auth.py  users.py
ai_task_system/: asgi.py  exceptions.py  settings.py  urls.py  wsgi.py
ai_tools/: conftest.py  exception_handlers.py  models.py  serializers.py  services.py  tasks.py  test_ai_endpoints.py  test_error_handling.py  tests.py  urls.py  utils.py  validators.py  views.py
ai_tools/migrations/: 0001_initial.py
ai_tools/services/: __init__.py  ai_service.py  factory.py  mocked_ai_service.py  protocols.py
ai_tools/tests/: __init__.py  test_ai_endpoints.py  test_error_handling.py  test_services.py
ai_tools/views/: __init__.py  smart_estimate.py  smart_rewrite.py  smart_summary.py  sse.py
ai_tools/views/tests/: __init__.py  (+8 more)
common/: admin.py  models.py  tests.py
control/: celery.pidbox.exchange
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  setupTests.ts
task_tracker/: celery.py  exceptions.py  settings.py  urls.py
tasks/: admin.py  apps.py  auth_views.py  conftest.py  models.py  pagination.py  serializers.py  services.py  signals.py  test_api_integration.py  test_error_handling.py  tests.py  typing.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_tag_name_alter_task_estimate_alter_task_title.py  0003_optimize_database_performance.py  0004_add_project_and_task_keys.py  0005_alter_task_options_alter_taskactivity_options_and_more.py  0006_auto_20250918_0025.py  0007_auto_20250918_0054.py  0008_remove_tag_model.py
tasks/models/: __init__.py  activity.py  choices.py  project.py  tag.py  task.py  validators.py
tasks/tests/: __init__.py  test_api_integration.py  test_error_handling.py  test_performance.py
tasks/views/: __init__.py  projects.py  tags.py  tasks.py
(+36 files in other folders)
